Basic navigation header

--- a/src/pages/Test/Test.scss
+++ b/src/pages/Test/Test.scss
@@ -12,7 +12,11 @@
         }
         
         img {
-            width: 500px;
+            max-width: 500px;
+
+            @media screen and (max-width: 600px) {
+                max-width: 300px;
+            }
         }
     }
 }
