--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -11,6 +11,15 @@
         position: absolute;
         top: 10px;
         left: 5px;
+
+        a {
+            text-decoration: none;
+            
+            span {
+                font-family: "Roboto";
+                font-size: 12px;
+            }
+        }
     }
 
     span {
