--- a/src/pages/Test/Test.scss
+++ b/src/pages/Test/Test.scss
@@ -18,5 +18,13 @@
                 max-width: 300px;
             }
         }
+
+        .clue-wrapper {
+            padding-top: 15px;
+
+            button {
+                margin: 5px;
+            }
+        }
     }
 }
